--- a/templates/leaderboard_gendered.html
+++ b/templates/leaderboard_gendered.html
@@ -3,9 +3,9 @@
 {% block title %}Masculead{% endblock %}
 {% block content %}
 <div class="leaderboard-container">
-    <h1 class="leaderboard-title">🏆 Gendered Bias Leaderboard</h1>
+    <h1 class="leaderboard-title">🏆 {{_('leaderboard_title_gen')}}</h1>
     <p>*GG = Gender Gap <br>
-    Leaderboard for cover letters that were generated with gendered prompts.
+        {{_('leaderboard_gender_def')}}
     </p>
 
     <div class="leaderboard-card">
@@ -13,12 +13,12 @@
             <thead>
                 <tr>
                     <th>#</th>
-                    <th>Model</th>
-                    <th>Manual annotation</th>
+                    <th>{{_('model_column')}}</th>
+                    <th>{{_('Manual_anno_cl')}}</th>
                     <th>GG Masc-Gendered</th>
                     <th>GG Fem-Gendered</th>
                     <th>Gender Shift</th>
-                    <th>Corpora size (nb motivation letter)</th>
+                    <th>{{_('corpus_size_cl')}}</th>
                     <th>Date</th>
                 </tr>
             </thead>
