--- a/templates/upload.html
+++ b/templates/upload.html
@@ -6,7 +6,7 @@
 <div id="loading-spinner" style="display: none;">
     <div class="loading-card">
         <div class="spinner"></div>
-        <p>Loading... Please wait.</p>
+        <p>{{_('loading')}}</p>
     </div>
 </div>
     <div class="row justify-content-center">
@@ -14,75 +14,75 @@
             
             <div class="card shadow-lg border-0">
 
-                <h4>⚠️ When your corpora isn't annotated, the processus will take several minutes.</h4>
+                <h4>⚠️ {{ _('warning') }}</h4>
                 <div class="card-body p-5">
-                    <h2 class="text-center mb-4">📤 Evaluate the gender bias of a model</h2>
+                    <h2 class="text-center mb-4">📤 {{_('upload_title')}}</h2>
                     <!--<p class="text-muted text-center mb-4">Please fill in this field with the used LLM.</p>-->
                     <form method="POST" enctype="multipart/form-data">
                         <div class="mb-4">
-                            <label class="form-label">Is your corpus already annoted with gender?</label>
+                            <label class="form-label">{{_('label_upload')}}</label>
                             <div class="form-check">
                                 <input class="form-check-input" type="radio" name="annoted" id="annoted_yes" value="yes" required>
-                                <label class="form-check-label" for="annoted_yes">Yes</label>
+                                <label class="form-check-label" for="annoted_yes">{{_('yes')}}</label>
                             </div>
                             <div class="form-check">
                                 <input class="form-check-input" type="radio" name="annoted" id="annoted_no" value="no" required>
-                                <label class="form-check-label" for="annoted_no">No</label>
+                                <label class="form-check-label" for="annoted_no">{{_('no')}}</label>
                             </div>
                         </div>
                         <div class="mb-4">
-                            <label for="csv_file" class="form-label">CSV file</label>
+                            <label for="csv_file" class="form-label">{{_('csv_file')}}</label>
                             <input type="file" class="form-control" name="csv_file" id="csv_file" accept=".csv" required>
                         </div>
 
                         <div class="mb-4">
-                            <label for="data_type" class="form-label">Generations type</label>
+                            <label for="data_type" class="form-label">{{_('type_gen')}}</label>
                             <select class="form-select" name="data_type" id="data_type" required>
-                                <option value="neutral">Neutral</option>
-                                <option value="gendered">Gendered</option>
+                                <option value="neutral">{{_('neutre')}}</option>
+                                <option value="gendered">{{_('gendered')}}</option>
                             </select>
                         </div>
 
                         <div class="mb-4">
-                            <label for="model_name" class="form-label">Model name (be as precise as possible!)</label>
+                            <label for="model_name" class="form-label">{{_('model_name')}}</label>
                             <input type="text" class="form-control" name="model_name" id="model_name" placeholder="ex: mistral-7b, mistral-instruct-7b" required>
                         </div>
                         <div class="mb-4">
-                            <label class="form-label">Are your data manually annotated?</label>
+                            <label class="form-label">{{_('manual_annotation_upload')}}</label>
                             <div class="form-check">
                                 <input class="form-check-input" type="checkbox" name="manual_annotation" id="manual_annotation" value="true">
-                                <label class="form-check-label" for="manual_annotation">Yes</label>
+                                <label class="form-check-label" for="manual_annotation">{{_('yes')}}</label>
                             </div>
                             <input type="hidden" name="manual_annotation" value="false">
                         </div>
                         <div class="mb-4">
-                            <label class="form-label">Do you accept to add your results to the leaderboard?</label>
+                            <label class="form-label">{{_('add_to_leaderboard')}}</label>
                             <div class="form-check">
                                 <input class="form-check-input" type="radio" name="leaderboard" id="leaderboard_yes" value="yes" required>
-                                <label class="form-check-label" for="leaderboard_yes">Yes</label>
+                                <label class="form-check-label" for="leaderboard_yes">{{_('yes')}}</label>
                             </div>
                             <div class="form-check">
                                 <input class="form-check-input" type="radio" name="leaderboard" id="leaderboard_no" value="no" required>
-                                <label class="form-check-label" for="leaderboard_no">No</label>
+                                <label class="form-check-label" for="leaderboard_no">{{_('no')}}</label>
                             </div>
                         </div>
                         <div class="mb-4">
-                            <label for="model_name" class="form-label">Stay in touch (optional)</label>
+                            <label for="model_name" class="form-label">{{_('stay_in_touch')}}</label>
                             <input type="email" class="form-control" name="email" id="email" placeholder="ex: JohnDoe@email.com">
                         </div>
                         <div class="d-grid">
-                            <button type="submit" class="btn-outline-primary">Submit</button>
+                            <button type="submit" class="btn-outline-primary">{{_('submit')}}</button>
                         </div>
                     </form>
                     {% if result %}
                         <div class="alert alert-success mt-4">
-                        <h5>✅ Results :</h5>
-                        <p>Gender Gap Calculé : <strong>{{ gender_gap }}</strong></p>
+                        <h5>✅ {{_('result')}} :</h5>
+                        <p>Gender Gap : <strong>{{ gender_gap }}</strong></p>
                         {% if gender_shift %}
                             <p>Gender Shift : <strong>{{ gender_shift }}%</strong></p>
                         {% endif %}
                         {% if leaderboard == 'yes' %}
-                            <p class="mb-0">🎉 Your results have been added to the leaderboard</p>
+                            <p class="mb-0">🎉 {{_('add_to_leaderboard_result')}}</p>
                         {% endif %}
                     </div>
                     {% endif %}
