--- a/static/style.css
+++ b/static/style.css
@@ -846,14 +846,18 @@ p.lead {
         transform: none !important; 
         box-shadow: none !important; 
         transition: none !important; 
-        cursor: default;
     }
-
+    
     .member-card {
-        width: 90%;
-        height: auto;
+        transform: none !important;
+        padding-bottom: 5%;
+        
     }
-
+    .card:hover {
+        transform: none !important;
+        box-shadow: none !important;
+        transition: none !important;
+    }
     .card {
         padding: 10px;
         max-width: 100%;
