--- a/templates/faqs.html
+++ b/templates/faqs.html
@@ -5,6 +5,10 @@
 {% block content %}
 
     <div class="home-content">
+        <h1>{{ _('qzero')}}</h1>
+
+        <xmp class="lead">{{ _('rzero')}} </xmp>
+
         <h1>{{ _('qun')}}</h1>
 
         <p class="lead">{{ _('run')}} </p>
