add distraction during loading

--- a/templates/upload.html
+++ b/templates/upload.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div id="loading-spinner" style="display: none;">
     <div class="loading-card">
-
+        <p>{{_('loading_distraction')}} <a href="https://mi.hepl.ch/projects/ia/bias.html" target="_blank"><i>The Biases of AI</i></a></p>
         <div class="spinner"></div>
         <p>{{_('loading')}}</p>
     </div>
