--- a/templates/home.html
+++ b/templates/home.html
@@ -9,7 +9,7 @@
         <p class="lead">
             {{_('home_lead')}}
         </p>
-        <<img src="static/img/fr_ex_prompt_300dpi.png" class="card-img-top member-img" alt="Example of generation">
+        <img src="static/img/fr_ex_prompt_300dpi.png" class="img-menu" alt="Example of generation">
         
         <div class="feature-cards">
             <div class="card">
