--- a/templates/home.html
+++ b/templates/home.html
@@ -18,9 +18,7 @@
             </div>
             <div class="card">
                 <h3>{{_('2nd')}}</h3>
-                <p>
-                    {{_('2nd_step')|safe}}
-                </p><br><br>
+                <p>{{_('2nd_step')|safe}}</p><br><br>
                 <a href="/upload" class="btn-outline-primary">{{_('btn_upload')|safe}}</a>
             </div>
             <div class="card">
