--- a/static/style.css
+++ b/static/style.css
@@ -62,6 +62,7 @@ body {
     height: auto;
     margin-left: 8%;
 }
+
 .sidebar ul {
     list-style: none;
     padding: 0;
@@ -754,6 +755,11 @@ p.lead {
 
 /* TABLETTES */
 @media (max-width: 1000px) {
+    .img-menu {
+        width: 250px;
+        height: auto;
+        margin-left: 8%;
+    }
     
     .container {
         flex-direction: column;
